--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Aditya Bansod (@adityabansod, http://www.adityabansod.net)",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.4.7"
+    "express": "~3.4.7",
+    "body-parser": "^1.12.0",
+    "sendgrid": "^1.6.0",
+    "slackbot": "0.0.1"
   },
   "engines": {
     "node": "0.10.x"
