--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "express": "~3.4.7",
     "body-parser": "^1.12.0",
     "sendgrid": "^1.6.0",
-    "slackbot": "0.0.1",
-    "express-force-domain": "0.0.6"
+    "express-force-domain": "0.0.6",
+    "slack-notify": "^0.1.4"
   },
   "engines": {
     "node": "0.10.x"
