--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "Aditya Bansod (@adityabansod, http://www.adityabansod.net)",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.4.7",
     "body-parser": "^1.12.0",
-    "sendgrid": "^1.6.0",
+    "express": "~3.4.7",
     "express-force-domain": "0.0.6",
+    "pipedrive": "^2.0.0",
+    "sendgrid": "^1.6.0",
     "slack-notify": "^0.1.4"
   },
   "engines": {
